# Yahoo_Data

./: .gitignore  ID.csv  Points.xlsx  README.md  Yahoo.ipynb  Yahoo_yfpy.ipynb  Yahoo_yfpy.py  cronoutput.txt  game_IDs.csv  history_data_pull.py  league-data.csv  league-draft.csv  league-teams.csv  league_IDs.csv  logg.txt  main.py  momupdate.json  private.json  pyproject.toml  teams.yaml  test.csv  testing.py
.ipynb_checkpoints/: Yahoo-checkpoint.ipynb  token-checkpoint.json
assests/: ID.csv  game_keys.csv  nfl-weeks.csv
data/: draft_results.csv  game_keys.csv  league_meta.csv  league_set.csv  matchups.csv  nfl_weeks.csv  roster_pos.csv  stat_cat.csv  teams.csv
data/draft/: league-draft-2012.csv  league-draft-2013.csv  league-draft-2014.csv  league-draft-2015.csv  league-draft-2016.csv  league-draft-2017.csv  league-draft-2018.csv  league-draft-2019.csv  league-draft-2020.csv  league-draft-2021.csv
data/matchups/: league-matchups-2012.csv  league-matchups-2013.csv  league-matchups-2014.csv  league-matchups-2015.csv  league-matchups-2016.csv  (+5 more)
dev_ipynb/: dev_playoffs.ipynb  dev_worksheet_1.ipynb  dev_worksheet_2.ipynb  dev_yahoo.ipynb
scripts/: Yahoo_yfpy.ipynb  db_psql_model.py  dev_playoffs.ipynb  dev_worksheet_1.ipynb  dev_worksheet_2.ipynb  dev_yahoo.ipynb  draft-grades.ipynb  main.ipynb  main.py  other.py  output_txt.py  players.csv  playoffs.ipynb  tournament.py  utils.py  worksheet3.ipynb  worksheet_1.ipynb  worksheet_2.ipynb  worksheet_3.ipynb  yahoo_query.py  yahooupdate_post.py  yahooupdate_reg.py
test_output/: nfl-game_keys.json
(+26 files in other folders)
